[package]
name = "ckb-chain"
version = "0.19.0-pre"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

[dependencies]
ckb-logger = { path = "../util/logger" }
ckb-core = { path = "../core" }
ckb-shared = { path = "../shared" }
ckb-chain-spec = { path = "../spec" }
ckb-store = { path = "../store" }
ckb-notify = { path = "../notify" }
ckb-verification = { path = "../verification" }
faketime = "0.2.0"
numext-fixed-hash = { version = "0.1", features = ["support_rand", "support_heapsize", "support_serde"] }
numext-fixed-uint = { version = "0.1", features = ["support_rand", "support_heapsize", "support_serde"] }
crossbeam-channel = "0.3"
ckb-stop-handler = { path = "../util/stop-handler" }
serde = "1.0"
ckb-traits = { path = "../traits" }
failure = "0.1.5"
serde_json = "1.0"
serde_derive = "1.0"
ckb-dao = { path = "../util/dao" }
ckb-proposal-table = { path = "../util/proposal-table" }
# DO NOT UPDATE "im", until clippy#4121 be solved
# https://github.com/rust-lang/rust-clippy/issues/4121
im = "~12.3"

[dev-dependencies]
env_logger = "0.6"
tempfile = "3.0"
ckb-test-chain-utils = { path = "../util/test-chain-utils" }
ckb-dao-utils = { path = "../util/dao/utils" }
